# troubleTicketDemo/troubleTicketAPI/OAuthServer/src/main/java/org/simplity/examples/troubleTicketDemo/OAuthServer/OAuthServerMain.java
@@ -2,19 +2,24 @@ package org.simplity.examples.troubleTicketDemo.OAuthServer;
 
 import java.io.File;
 import java.net.URI;
+import java.util.EnumSet;
 import java.util.HashMap;
 
+import javax.servlet.DispatcherType;
 import javax.servlet.ServletRegistration;
 
 import org.glassfish.grizzly.http.server.CLStaticHttpHandler;
 import org.glassfish.grizzly.http.server.HttpHandler;
 import org.glassfish.grizzly.http.server.HttpServer;
+import org.glassfish.grizzly.servlet.FilterRegistration;
 import org.glassfish.grizzly.servlet.WebappContext;
 import org.glassfish.jersey.grizzly2.httpserver.GrizzlyHttpServerFactory;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.ServerProperties;
 import org.glassfish.jersey.servlet.ServletContainer;
 import org.simplity.examples.troubleTicketDemo.OAuthServer.endpoints.LoginEndpoint;
+import org.simplity.examples.troubleTicketDemo.OAuthServer.filters.CorsFilter;
+import org.simplity.examples.troubleTicketDemo.OAuthServer.filters.EntryFilter;
 
 import com.sun.javafx.collections.MappingChange.Map;
 
@@ -28,6 +33,7 @@ import io.swagger.parser.SwaggerParser;
  */
 public class OAuthServerMain {
 	public static java.util.Map<String, SecuritySchemeDefinition> secDefs;
+
 	public static void main(String[] args) {
 		HttpServer server = null;
 		try {
@@ -35,28 +41,27 @@ public class OAuthServerMain {
 			File jarPath = new File(
 					OAuthServerMain.class.getProtectionDomain().getCodeSource().getLocation().getPath());
 			String folder = jarPath + File.separator + "webapp";
-			final Swagger swagger = new SwaggerParser().read(jarPath +File.separator+ "comp/openapi" + File.separator + "troubleTicket.json");
-			secDefs = swagger.getSecurityDefinitions();		
-			
+			final Swagger swagger = new SwaggerParser()
+					.read(jarPath + File.separator + "comp/openapi" + File.separator + "troubleTicket.json");
+			secDefs = swagger.getSecurityDefinitions();
+
 			WebappContext wContext = new WebappContext("OAuthServer Context");
 
-			// FilterRegistration testFilterReg =
-			// webappContext.addFilter("TestFilter", TestFilter.class);
-			// testFilterReg.addMappingForUrlPatterns(EnumSet.allOf(DispatcherType.class),
-			// "/*");
-
+			FilterRegistration testFilterReg1 = wContext.addFilter("EntryFilter", EntryFilter.class);			
+			testFilterReg1.addMappingForUrlPatterns(EnumSet.allOf(DispatcherType.class), "/*");
+			
 			ServletRegistration sRegistration = wContext.addServlet("Jersey", ServletContainer.class);
 			sRegistration.setInitParameter(ServerProperties.PROVIDER_PACKAGES,
 					"org.simplity.examples.troubleTicketDemo.OAuthServer.endpoints");
 			sRegistration.setInitParameter(ServerProperties.PROVIDER_SCANNING_RECURSIVE, "false");
 			sRegistration.addMapping("auth");
 
-			server = GrizzlyHttpServerFactory.createHttpServer(new URI("http://localhost:8090"));		
+			server = GrizzlyHttpServerFactory.createHttpServer(new URI("http://localhost:8090"));
 			wContext.deploy(server);
-			
+
 			HttpHandler httpHandler = new CLStaticHttpHandler(HttpServer.class.getClassLoader(), "/webapp/");
 			server.getServerConfiguration().addHttpHandler(httpHandler, "/");
-			
+
 			server.start();
 			Thread.currentThread().join();
 		} catch (Exception e) {
