# troubleTicketDemo/troubleTicketAPI/troubleTicketService/src/main/resources/comp/openapi/troubleTicket.json
@@ -79,7 +79,14 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth": [
+              "read_troubleTicket"
+            ]
+          }
+        ]
       }
     },
     "/troubleTicket/{troubleTicketId}": {
